# rationalbloks-mcp

./: .gitignore  DOCUMENTATION_COVERAGE_COMPARISON.md  DOCUMENTATION_UPDATE_SUMMARY.md  README.md  pyproject.toml  server.json  smithery.yaml
src/rationalbloks_mcp/: __init__.py  client.py  server.py  tools.py
src/rationalbloks_mcp/backend/: __init__.py  client.py  tools.py
src/rationalbloks_mcp/core/: __init__.py  auth.py  server.py  transport.py
src/rationalbloks_mcp/frontend/: __init__.py  app_generator.py  client.py  tools.py
