[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rationalbloks-mcp"
version = "0.1.13"
description = "Enterprise-grade MCP Server for RationalBloks - Connect AI agents to your backend projects"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    { name = "RationalBloks", email = "support@rationalbloks.com" }
]
keywords = ["mcp", "ai", "backend", "database", "api", "claude", "gpt", "cursor", "smithery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "starlette>=0.41.0",
    "uvicorn>=0.32.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://rationalbloks.com"
Documentation = "https://rationalbloks.com/docs/mcp"
Repository = "https://github.com/rationalbloks/rationalbloks-mcp"
Issues = "https://github.com/rationalbloks/rationalbloks-mcp/issues"

[project.scripts]
rationalbloks-mcp = "rationalbloks_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rationalbloks_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
