[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rationalbloks-mcp"
version = "0.3.4"
description = "Unified MCP Server for RationalBloks - Backend API + Frontend Generation for AI agents"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    { name = "RationalBloks", email = "support@rationalbloks.com" }
]
keywords = ["mcp", "ai", "backend", "frontend", "database", "api", "claude", "gpt", "cursor", "smithery", "fullstack"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "certifi>=2024.0.0",
    "starlette>=0.41.0",
    "uvicorn>=0.32.0",
    "sse-starlette>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://rationalbloks.com"
Documentation = "https://rationalbloks.com/docs/mcp"
Repository = "https://github.com/rationalbloks/rationalbloks-mcp"
Issues = "https://github.com/rationalbloks/rationalbloks-mcp/issues"

# Three entry points for different modes
[project.scripts]
rationalbloks-mcp = "rationalbloks_mcp:main"
rationalbloks-mcp-backend = "rationalbloks_mcp:main_backend"
rationalbloks-mcp-frontend = "rationalbloks_mcp:main_frontend"

[tool.hatch.build.targets.wheel]
packages = ["src/rationalbloks_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
